--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Crete+Round&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200..900&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,11 +9,11 @@
 }
 
 body {
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   text-align: center;
   align-items: center;
   background-color: #1c1a19;
-  background-image: url("/myPortfolio/images/Group.jpg");
+  background-image: url("/myPortfolio/Illustration.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
@@ -36,7 +40,6 @@ body {
   flex-direction: column;
   align-items: flex-start;
   text-align: left;
-  align-items: flex-start;
   padding: 0 2rem;
   margin: 0;
   gap: 1rem;
@@ -48,7 +51,7 @@ body {
   flex-grow: 0;
   color: #ff6b00;
   font-size: 4rem;
-  font-family: 'Crete Round';
+  font-family: 'Crete Round', sans-serif;
 }
 
 .headline h2 {
@@ -56,7 +59,7 @@ body {
   order: 2;
   flex-grow: 0;
   color: #fff;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-size: 2rem;
 }
 
@@ -65,7 +68,7 @@ body {
   order: 3;
   flex-grow: 0;
   color: #fff;
-  font-family: 'Poppins';
+  font-family: 'Crimson Pro', sans-serif;
   font-size: 1.25rem;
 }
 
