--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,6 @@ body {
   text-align: center;
   align-items: center;
   background-color: #1c1a19;
-  background-image: url("/myPortfolio/Illustration.png");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;
 }
 
 /* Flex */
@@ -43,6 +39,12 @@ body {
   padding: 0 2rem;
   margin: 0;
   gap: 1rem;
+  height: 40rem;
+  background-image: url(../images/Background.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-attachment: fixed;
+  background-size: 40% 40%;
 }
 
 .headline h1 {
@@ -77,7 +79,12 @@ body {
   list-style-type: none;
   background: none;
   gap: 1em;
-  padding-left: 0;
+  padding: 1rem 0 0 0;
+}
+
+img {
+  height: 1rem;
+  width: 1rem;
 }
 
 img:hover {
