--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,8 @@ body {
   background-color: #1c1a19;
 }
 
-.headline h1 {
+.headline h1,
+.works-item h1 {
   flex: none;
   order: 1;
   flex-grow: 0;
@@ -99,21 +100,96 @@ img:active {
   background: #f55a00;
 }
 
-/* Works and About myself */
+/* Works */
+#projects {
+  display: grid;
+  font-family: 'Crimson Pro', sans-serif;
+}
 
+#projects h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  padding: 0 .5rem 2rem .5rem;
+  margin: 1.5rem;
+  border-bottom: .1rem solid;
+}
+
+#flex-projects {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 2rem;
+}
+
+#flex-projects div img {
+  padding: 2rem 0;
+  width: 90%;
+  height: 90%;
+}
+
+#flex-projects h2 {
+  font-size: 2rem;
+  padding-bottom: 1rem;
+}
+
+#lang-box {
+  padding: 1.5rem 0;
+}
+
+#lang-box span {
+  border: .2px solid;
+  margin-right: .5rem;
+  padding: .5rem;
+}
+
+#flex-projects div button {
+  padding: .5rem;
+  background-color: #f55a00;
+  color: #fff;
+  font-weight: bold;
+  border-width: .1rem;
+}
+
+/*
 .works {
   display: grid;
   gap: 1rem;
-  padding: 2rem;
-  margin: 2rem;
+  padding: 1rem;
+  margin: 1rem;
   background: #e5e5e5;
 }
 
 .works-item {
   padding: .5rem;
   margin: .5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+.works-item .wrap-boxes {
+  display: flex;
+}
+
+.wrap-boxes p {
+  padding: .5rem;
+  border: .1rem solid #e5e5e5;
+  margin: .5rem;
+  font-weight: 900;
+  background-color: rgba(255, 255, 255, 0.24);
+}
+
+.works-item h1 {
+  font-size: 1.5rem;
+  color: #e5e5e5;
+}
+
+.works-item h2 {
+  font-size: 1rem;
+}
+*/
+
+/* About myself */
 .button {
   background-color: #4CAF50; /* Green */
   border: none;
@@ -215,3 +291,6 @@ footer:first-of-type {
 #last-list {
   padding-bottom: 7em;
 }
+
+/* Form */
+
