--- a/css/styles.css
+++ b/css/styles.css
@@ -132,14 +132,23 @@ img:active {
   padding-bottom: 1rem;
 }
 
-#lang-box {
+.lang-box {
   padding: 1.5rem 0;
 }
 
-#lang-box span {
+.lang-box span {
   border: .2px solid;
   margin-right: .5rem;
   padding: .5rem;
+}
+
+#lang-box {
+ color: #fff;
+ font-weight: bold;
+}
+
+.flex-button {
+  background-color: #e5e5e5;
 }
 
 #flex-projects div button {
@@ -148,6 +157,54 @@ img:active {
   color: #fff;
   font-weight: bold;
   border-width: .1rem;
+}
+
+.demo-wrap:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  background-image: url('../images/Placeholder.png');
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+}
+
+.demo-content,
+.demo-wrap {
+  position: relative;
+}
+
+.main-projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+  font-weight: 900;
+}
+
+.main-projects h3,
+.main-projects p,
+.main-projects .lang-box {
+  order: 0;
+  padding: 1rem 2rem;
+}
+
+.main-projects h3 {
+  padding-top: 5rem;
+}
+
+.main-projects a {
+  order: 0;
+  padding: .5rem 0rem;
+}
+
+#last-item {
+  margin-bottom: 5rem;
 }
 
 /*
