--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,14 @@ body {
   padding: 0 2rem;
 }
 
+a,
+a:link,
+a:active,
+a:hover,
+a:visited {
+  text-decoration: none;
+}
+
 .nav a,
 .nav nav {
   align-self: center;
@@ -106,12 +114,18 @@ img:active {
   font-family: 'Crimson Pro', sans-serif;
 }
 
+.footer h1{
+  color: #f55a00;
+  font-size: 4rem;
+  font-family: 'Crete Round', sans-serif;
+}
+
 #projects h1 {
   font-size: 2.5rem;
   font-weight: bold;
-  padding: 0 .5rem 2rem .5rem;
+  padding: 0 0.5rem 2rem 0.5rem;
   margin: 1.5rem;
-  border-bottom: .1rem solid;
+  border-bottom: 0.1rem solid;
 }
 
 #flex-projects {
@@ -137,18 +151,28 @@ img:active {
 }
 
 .lang-box span {
-  border: .2px solid;
-  margin-right: .5rem;
-  padding: .5rem;
+  border: 0.2px solid;
+  margin-right: 0.5rem;
+  padding: 0.5rem;
 }
 
 #lang-box {
- color: #fff;
- font-weight: bold;
+  color: #fff;
+  font-weight: bold;
 }
 
 .flex-button {
   background-color: #e5e5e5;
+}
+
+.footer button {
+  padding: 1rem;
+  margin: 2rem 0 5rem 0;
+  background: #d7c6bc;
+  color: #fff;
+  border-width: .1rem;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 #flex-projects div button {
@@ -156,7 +180,7 @@ img:active {
   background-color: #f55a00;
   color: #fff;
   font-weight: bold;
-  border-width: .1rem;
+  border-width: 0.1rem;
 }
 
 .demo-wrap:before {
@@ -200,55 +224,16 @@ img:active {
 
 .main-projects a {
   order: 0;
-  padding: .5rem 0rem;
+  padding: 0.5rem 0rem;
 }
 
 #last-item {
   margin-bottom: 5rem;
 }
 
-/*
-.works {
-  display: grid;
-  gap: 1rem;
-  padding: 1rem;
-  margin: 1rem;
-  background: #e5e5e5;
-}
-
-.works-item {
-  padding: .5rem;
-  margin: .5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.works-item .wrap-boxes {
-  display: flex;
-}
-
-.wrap-boxes p {
-  padding: .5rem;
-  border: .1rem solid #e5e5e5;
-  margin: .5rem;
-  font-weight: 900;
-  background-color: rgba(255, 255, 255, 0.24);
-}
-
-.works-item h1 {
-  font-size: 1.5rem;
-  color: #e5e5e5;
-}
-
-.works-item h2 {
-  font-size: 1rem;
-}
-*/
-
 /* About myself */
 .button {
-  background-color: #4CAF50; /* Green */
+  background-color: #4caf50; /* Green */
   border: none;
   color: white;
   padding: 15px 32px;
@@ -260,21 +245,14 @@ img:active {
 }
 
 .button:hover {
-  background-color: #4CAF50; /* Green */
+  background-color: #4caf50; /* Green */
   color: white;
-}
-
-a,
-a:link,
-a:active,
-a:hover,
-a:visited {
-  text-decoration: none;
 }
 
 hr {
   margin-bottom: 5rem;
 }
+
 .footer {
   text-align: left;
   padding: 2rem;
@@ -289,25 +267,9 @@ footer:first-of-type {
   background-size: 40% 40%;
 }
 
-.footer h1{
-  color: #f55a00;
-  font-size: 4rem;
-  font-family: 'Crete Round', sans-serif;
-}
-
 .footer p {
   color: #fff;
   margin: 1rem 0 0 0;
-}
-
-.footer button {
-  padding: 1rem;
-  margin: 2rem 0 5rem 0;
-  background: #f55a00;
-  color: #fff;
-  border-width: .1rem;
-  font-size: 1rem;
-  font-weight: bold;
 }
 
 .footer ul {
@@ -350,4 +312,3 @@ footer:first-of-type {
 }
 
 /* Form */
-
