--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ img:active {
   font-family: 'Crimson Pro', sans-serif;
 }
 
-.footer h1{
+.footer h1 {
   color: #f55a00;
   font-size: 4rem;
   font-family: 'Crete Round', sans-serif;
@@ -170,20 +170,20 @@ img:active {
   margin: 2rem 0 5rem 0;
   background: #d7c6bc;
   color: #fff;
-  border-width: .1rem;
+  border-width: 0.1rem;
   font-size: 1rem;
   font-weight: bold;
 }
 
 #flex-projects div button {
-  padding: .5rem;
+  padding: 0.5rem;
   background-color: #f55a00;
   color: #fff;
   font-weight: bold;
   border-width: 0.1rem;
 }
 
-.demo-wrap:before {
+.demo-wrap::before {
   content: ' ';
   display: block;
   position: absolute;
