--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200..900&display=swap');
 
 * {
   box-sizing: border-box;
@@ -298,19 +298,19 @@ footer:first-of-type {
 }
 
 #diamond {
-  list-style-image: url("../images/diamond.png");
+  list-style-image: url('../images/diamond.png');
   font-size: 1.5rem;
   padding: 1rem;
 }
 
 #square {
-  list-style-image: url("../images/square.png");
+  list-style-image: url('../images/square.png');
   font-size: 1.5rem;
   padding: 1rem;
 }
 
 #disc {
-  list-style-image: url("../images/disc.png");
+  list-style-image: url('../images/disc.png');
   font-size: 1.5rem;
   padding: 1rem;
 }
@@ -379,4 +379,8 @@ footer:first-of-type {
   height: 3rem;
   width: 8rem;
   margin-left: 3.5rem;
+}
+
+.projects-title {
+  margin: 0 auto;
 }
