--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ img:active {
   border: 0;
 }
 
-.footer h1 {
+.about-me h1 {
   color: #f55a00;
   font-size: 4rem;
   font-family: 'Crete Round', sans-serif;
@@ -174,7 +174,7 @@ img:active {
   background-color: #e5e5e5;
 }
 
-.footer button {
+.about-me button {
   padding: 1rem;
   margin: 2rem 0 5rem 0;
   background: #f55a00;
@@ -261,26 +261,26 @@ hr {
   margin-bottom: 5rem;
 }
 
-.footer {
+.about-me {
   text-align: left;
   padding: 2rem;
   background-color: #1c1a19;
   border-bottom: 0;
 }
 
-footer:first-of-type {
+.about-me:first-of-type {
   background-image: url(../images/about\ me.png);
   background-repeat: no-repeat;
   background-position: bottom right;
   background-size: 40% 40%;
 }
 
-.footer p {
+.about-me p {
   color: #fff;
   margin: 1rem 0 0 0;
 }
 
-.footer ul {
+.about-me ul {
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -384,4 +384,5 @@ footer:first-of-type {
 .projects-title {
   display: flex;
   justify-content: center;
+  margin-top: 6.5rem;
 }
