Fix linter errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ img {
 }
 
 #projects-title {
-  padding: 10rem 0rem 5rem;
+  padding: 10rem 0 5rem;
   font-size: 3rem;
   text-align: center;
 }
