--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,13 @@ img {
 }
 
 .flex-button {
-  background-color: #e5e5e5;
+  padding: 1.5rem;
+  background-color: #f55a00;
+  color: #fff;
+  font-weight: bold;
+  border-width: 0.1rem;
+  font-size: 2rem;
+}
 }
 
 #about-me button {
@@ -256,6 +262,7 @@ img {
 .demo-content,
 .demo-wrap {
   position: relative;
+  margin: 2rem;
 }
 
 .main-projects {
@@ -263,6 +270,7 @@ img {
   flex-direction: column;
   justify-content: center;
   color: #fff;
+  margin: 0;
 }
 
 .main-projects h3 {
