--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,6 @@ img {
   border-width: 0.1rem;
   font-size: 2rem;
 }
-}
 
 #about-me button {
   padding: 1rem;
@@ -600,5 +599,20 @@ hr {
 
   #contact-social-form {
     width: 25%;
+  }
+
+  .flex-button {
+    display: none;
+  }
+
+  #projects-section-3 {
+    display: grid;
+    grid-template-columns: 25% 25% 25%;
+    grid-template-rows: 25% 25% 25%;
+    height: 100%;
+  }
+
+  #last-item {
+    margin-bottom: 2rem;
   }
 }
